switch to bit set timestamp check